[gd_scene load_steps=8 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://PackgeScene/AstarMoviment.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=3]
[ext_resource path="res://PackgeScene/LifeSystem.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=4]
radius = 7.0

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Arm/Weapon:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/path = NodePath("Arm/Weapon:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -70.0, 0.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_hit"
} ]
}

[node name="Enemy" type="KinematicBody2D" groups=["Enemy"]]
collision_layer = 2
collision_mask = 2
collision/safe_margin = 0.001
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
self_modulate = Color( 1, 0, 0, 1 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="AstarMoviment" parent="." instance=ExtResource( 2 )]

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="Arm" type="Sprite" parent="."]
self_modulate = Color( 1, 0, 0, 1 )
rotation = -0.00643389
scale = Vector2( 0.03125, 0.03125 )
texture = ExtResource( 1 )

[node name="Weapon" type="Sprite" parent="Arm"]
modulate = Color( 1, 0, 0, 1 )
scale = Vector2( 6.5, 0.5 )
texture = ExtResource( 1 )
offset = Vector2( 32, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/attack = SubResource( 3 )

[node name="LifeSystem" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, 6 )

[connection signal="on_position" from="AstarMoviment" to="." method="_on_AstarMoviment_on_position"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="dead" from="LifeSystem" to="." method="_on_LifeSystem_dead"]
